# solana-referral-app

./: .gitignore  CLAUDE.md  README.md  mainnet-deploy.md  setup-dev.sh  solana-build.md  solana-cli.md  todo.md
programId/: Anchor.toml  Cargo.toml  rust-toolchain.toml
programId/src/: lib.rs
scripts/: affiliate-stats.cjs  deploy-devnet.sh  deploy-mainnet.sh  promote-affiliate.cjs  test-affiliate-tiers.cjs  test-sol-devnet.cjs  test-suite.cjs  test-usdc-devnet.cjs
web/: package.json
web/app/: WalletProviders.tsx  layout.tsx  page.tsx
web/app/generator/: page.tsx
web/components/: TransactionTable.tsx
web/idl/: program.json
web/lib/: program.ts  solana.ts  storage.ts
web/providers/: NetworkProvider.tsx
web/types/: bs58.d.ts
