[package]
name = "program"
version = "0.1.0"
description = "Solana Pay Referral — tiered affiliate commissions"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
init-if-needed = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

[profile.release]
overflow-checks = true

[dev-dependencies]
