[package]
name = "program"
version = "0.1.0"
description = "Solana Pay Referral — tiered affiliate commissions"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "program"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
devnet-admin = []  # build with this for devnet: keeps old file-keypair admin
                   # mainnet build = no features = Ledger admin (2v4Xjd...)

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = { version = "0.32.1", default-features = false, features = ["token", "associated_token"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }

[profile.release]
overflow-checks = true
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[dev-dependencies]
